// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager detectPackageFiles(config) adds package files to object 1`] = `
Array [
  Object {
    "manager": "npm",
    "packageFile": "package.json",
  },
  Object {
    "manager": "npm",
    "packageFile": "backend/package.json",
  },
]
`;

exports[`manager detectPackageFiles(config) finds .nvmrc files 1`] = `
Array [
  Object {
    "manager": "nvm",
    "packageFile": ".nvmrc",
  },
]
`;

exports[`manager detectPackageFiles(config) finds .travis.yml files 1`] = `
Array [
  Object {
    "manager": "travis",
    "packageFile": ".travis.yml",
  },
]
`;

exports[`manager detectPackageFiles(config) finds Dockerfiles 1`] = `
Array [
  Object {
    "manager": "docker",
    "packageFile": "Dockerfile",
  },
  Object {
    "manager": "docker",
    "packageFile": "other/Dockerfile",
  },
]
`;

exports[`manager detectPackageFiles(config) finds WORKSPACE files 1`] = `
Array [
  Object {
    "manager": "bazel",
    "packageFile": "WORKSPACE",
  },
  Object {
    "manager": "bazel",
    "packageFile": "other/WORKSPACE",
  },
]
`;

exports[`manager detectPackageFiles(config) finds meteor package files 1`] = `
Array [
  Object {
    "manager": "meteor",
    "packageFile": "modules/something/package.js",
  },
]
`;

exports[`manager detectPackageFiles(config) ignores node modules 1`] = `
Array [
  Object {
    "manager": "npm",
    "packageFile": "package.json",
  },
]
`;

exports[`manager detectPackageFiles(config) ignores node modules 2`] = `undefined`;

exports[`manager detectPackageFiles(config) ignores node modules 3`] = `undefined`;

exports[`manager detectPackageFiles(config) skips meteor package files with no json 1`] = `Array []`;
